--- a/Styles/SecondNav.css
+++ b/Styles/SecondNav.css
@@ -3,7 +3,7 @@
   height: 50px;
   transition: all .4s ease;
   backdrop-filter: blur(20px);
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: #ffffffb3;
   -webkit-backdrop-filter: saturate(180%) blur(20px);
 }
 /* 上方導覽列二容器 */
@@ -22,13 +22,13 @@
   font-weight: 300;
   border-radius: 30px;
   padding: 5px 12px 4px;
+  --bs-btn-color: #1d1d1f;
   transition: all .3s ease;
-  --bs-btn-color: rgb(29, 29, 31);
-  background-color: rgb(232, 232, 237);
-  --bs-btn-hover-color: rgb(29, 29, 31);
+  background-color: #e8e8ed;
+  --bs-btn-hover-color: #1d1d1f;
 }
 #secondNavSearchBtn:hover {
-  background-color: rgb(210, 210, 215);
+  background-color: #d2d2d7;
 }
 /* 上方導覽列二展開的熱門主題區塊裡的搜尋框 */
 #hotTopicsSearchBar {
@@ -38,7 +38,7 @@
 /* 上方導覽列二展開的熱門主題區塊 */
 #hotTopics {
   z-index: 1022;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: #ffffffe6;
 }
 #hotTopicsContainer {
   max-width: 1024px;
@@ -46,14 +46,14 @@
 }
 /* 上方導覽列二展開的熱門主題連結 */
 .hotTopicLink {
+  color: #1d1d1f;
   font-size: 14px;
   font-weight: 600;
   margin-top: 16px;
   padding-left: 0px;
-  color: rgb(29, 29, 31);
 }
 .hotTopicLink:hover {
-  color: rgb(0, 102, 204);
+  color: #0066cc;
 }
 /* 熱門話題展開時的暗掉背景 */
 #hotTopicsDimBackground {
@@ -61,7 +61,7 @@
   z-index: 1021;
   position: absolute;
   backdrop-filter: blur(20px);
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #ffffffcc;
   -webkit-backdrop-filter: saturate(180%) blur(20px);
 }
 /* 螢幕大於 768 */
