--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -311,7 +311,7 @@ table {
 }
 #learnMore {
   padding: 52px 0;
-  background-color: #1d1d1f;
+  background-color: #fbfbfd;
 }
 #learnMoreText {
   color: #6e6e73;
