--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -38,7 +38,6 @@ body {
 }
 /* 最新文章 */
 .homeNewPost {
-  opacity: 0;
   position: relative;
   border-radius: 16px;
   transform: translateY(20%);
@@ -50,7 +49,7 @@ body {
 }
 .homeNewPost.show,
 .homePopularPost.show {
-  opacity: 1;
+  opacity: 1 !important;
   transform: translateY(0);
 }
 /* 最新文章的圖片容器 */
@@ -88,7 +87,7 @@ body {
   padding: 32px;
 }
 .homeNewPost1-4Title {
-	color: #1d1d1f;
+  color: #1d1d1f;
   font-size: 22px;
   font-weight: 500;
   line-height: 28px;
@@ -144,7 +143,6 @@ body {
   margin-bottom: 8px;
 }
 .homePopularPost {
-  opacity: 0;
   margin-top: 32px;
   position: relative;
   padding-bottom: 32px;
