--- a/Styles/Label.css
+++ b/Styles/Label.css
@@ -36,7 +36,6 @@ body {
   margin-bottom: 24px;
 }
 .labelPagePost {
-  opacity: 0;
   position: relative;
   border-radius: 16px;
   transform: translateY(20%);
@@ -47,7 +46,7 @@ body {
   transform: scale(1.03);
 }
 .labelPagePost.show {
-  opacity: 1;
+  opacity: 1 !important;
   transform: translateY(0);
 }
 #labelPageFirstPostImgContainer {
