--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -138,6 +138,25 @@ table {
   animation: shimmer 2s linear infinite;
   background: #fafafa linear-gradient(to right, #fafafa 0%, #e8e8ed 20%, #fafafa 40%, #fafafa 100%);
 }
+.blogPostImg {
+  border-radius: 10px;
+}
+.blogPostImgCaption {
+  color: #6e6e73;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1.3333733333;
+}
+.reloadImageBtn {
+  width: 24px;
+  height: 24px;
+  color: #161617;
+  font-size: 13px;
+  margin-top: -4px;
+  margin-left: 24px;
+  background-color: #f5f5f7;
+  -webkit-text-stroke: 0.6px;
+}
 .blogPostTableContainer {
   padding: 0;
   font-size: 17px;
@@ -145,9 +164,6 @@ table {
   max-width: 980px;
   margin-bottom: 27px;
   transition: all .35s ease;
-}
-.blogPostImg {
-  border-radius: 10px;
 }
 .blogPostCaution {
   padding: 16px;
