--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -161,9 +161,7 @@ table {
   margin-left: 24px;
   background-color: #f5f5f7;
   -webkit-text-stroke: 0.6px;
-}
-.reloadImageBtn:hover {
-  background-color: #e8e8e8;
+  --bs-btn-hover-bg: #e8e8e8;
 }
 .blogPostTableContainer {
   padding: 0;
