--- a/Styles/SecondNav.css
+++ b/Styles/SecondNav.css
@@ -28,6 +28,14 @@
   --bs-btn-hover-bg: #d2d2d7;
   --bs-btn-hover-color: #1d1d1f;
 }
+.secondNavLink {
+  font-size: 12px;
+  font-weight: 400;
+  color: #1d1d1f;
+  margin-right: 24px;
+  transition: all .35s ease;
+  --bs-link-hover-color-rgb: 0, 102, 204;
+}
 /* 上方導覽列二展開的熱門主題區塊裡的搜尋框 */
 #hotTopicsSearchBar {
   font-size: 19px;
