--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -264,7 +264,7 @@ table {
   background: #e8e8ed !important;
 }
 .swg-button-v2-icon-dark, .swg-button-v2-icon-light {
-  margin-left: 0 !important;;
+  margin-left: 0 !important;
 }
 #blogPostBottomHr {
   margin: 52px 0;
