--- a/Styles/Pages/PromotePost.css
+++ b/Styles/Pages/PromotePost.css
@@ -13,6 +13,17 @@
   line-height: 60px;
   margin-bottom: 20px;
 }
+#subTitleContainer {
+  width: 980px;
+}
+#subTitle {
+  font-size: 22px;
+  font-weight: 400;
+  color: rgb(29,29,31);
+  line-height: 31px;
+  width: 653px;
+  margin-bottom: 80px;
+}
 #learnMore {
   padding: 52px 0;
   background-color: #fbfbfd;
@@ -45,6 +56,15 @@
     font-size: 48px;
     line-height: 52px;
   }
+  #subTitleContainer {
+    width: 692px;
+  }
+  #subTitle {
+    font-size: 19px;
+    line-height: 28px;
+    width: auto;
+    margin-bottom: 64px;
+  }
   #learnMore {
     padding: 48px 0;
   }
@@ -61,12 +81,19 @@
     margin-bottom: 24px;
   }
   #titleContainer {
-    max-width: 414px;
+    width: 87.5%;
   }
   #title {
     font-size: 32px;
     line-height: 39px;
     margin-bottom: 16px;
+  }
+  #subTitleContainer {
+    width: 100%;
+  }
+  #subTitle {
+    width: 87.5%;
+    margin-bottom: 52px;
   }
   #learnMore {
     padding: 44px 0;
