--- a/Styles/Pages/PromotePost.css
+++ b/Styles/Pages/PromotePost.css
@@ -24,6 +24,39 @@
   width: 653px;
   margin-bottom: 80px;
 }
+@keyframes shimmer {
+  from { background-position: 200% 0; }
+  to { background-position: -200% 0; }
+}
+.blogPostLaodingImgContainer {
+  aspect-ratio: 16/9;
+  background-size: 200% 100% !important;
+  animation: shimmer 2s linear infinite;
+  background: #fafafa linear-gradient(to right, #fafafa 0%, #e8e8ed 20%, #fafafa 40%, #fafafa 100%);
+}
+.imgCaptionContainer {
+  max-width: 693px;
+  padding: 0 20px 0;
+  margin-bottom: 27px;
+  transition: all .35s ease;
+}
+.imgCaption {
+  color: #6e6e73;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1.3333733333;
+}
+.reloadImageBtn {
+  width: 24px;
+  height: 24px;
+  color: #161617;
+  font-size: 13px;
+  margin-top: -4px;
+  margin-left: 24px;
+  background-color: #f5f5f7;
+  -webkit-text-stroke: 0.6px;
+  --bs-btn-hover-bg: #e8e8e8;
+}
 #learnMore {
   padding: 52px 0;
   background-color: #fbfbfd;
@@ -65,6 +98,10 @@
     width: auto;
     margin-bottom: 64px;
   }
+  .imgCaptionContainer {
+    max-width: 616px;
+    margin-bottom: 24px;
+  }
   #learnMore {
     padding: 48px 0;
   }
@@ -94,6 +131,9 @@
   #subTitle {
     width: 87.5%;
     margin-bottom: 52px;
+  }
+  .imgCaptionContainer {
+    max-width: 402px;
   }
   #learnMore {
     padding: 44px 0;
