--- a/Styles/Pages/PromotePost.css
+++ b/Styles/Pages/PromotePost.css
@@ -4,9 +4,11 @@ img {
 #smallLogoContainer {
   margin-top: 80px;
   margin-bottom: 24px;
+  transition: all .35s ease;
 }
 #titleContainer {
   width: 980px;
+  transition: all .35s ease;
 }
 #title {
   width: 83.33%;
@@ -18,6 +20,7 @@ img {
 }
 #subTitleContainer {
   width: 980px;
+  transition: all .35s ease;
 }
 #subTitle {
   font-size: 22px;
