--- a/Styles/Pages/Invitation.css
+++ b/Styles/Pages/Invitation.css
@@ -1,3 +1,9 @@
+#smallLogo {
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 80px;
+  margin-bottom: 24px;
+}
 #learnMore {
   padding: 52px 0;
   background-color: #fbfbfd;
@@ -33,6 +39,9 @@
 }
 /* 螢幕小於 734 */
 @media only screen and (max-width: 734px) {
+  #smallLogo {
+    margin-top: 60px;
+  }
   #learnMore {
     padding: 44px 0;
   }
