--- a/Styles/Pages/Invitation.css
+++ b/Styles/Pages/Invitation.css
@@ -50,6 +50,28 @@ img {
   animation: shimmer 2s linear infinite;
   background: #fafafa linear-gradient(to right, #fafafa 0%, #e8e8ed 20%, #fafafa 40%, #fafafa 100%);
 }
+.imgCaptionContainer {
+  max-width: 653px;
+  margin: 16px 0 44px;
+  transition: all .35s ease;
+}
+.imgCaption {
+  color: #6e6e73;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 16px;
+}
+.reloadImgBtn {
+  width: 24px;
+  height: 24px;
+  color: #161617;
+  font-size: 13px;
+  margin-top: -4px;
+  margin-left: 24px;
+  background-color: #f5f5f7;
+  -webkit-text-stroke: 0.6px;
+  --bs-btn-hover-bg: #e8e8e8;
+}
 #learnMore {
   padding: 52px 0;
   background-color: #fbfbfd;
@@ -86,6 +108,10 @@ img {
     line-height: 28px;
     margin-bottom: 64px;
   }
+  .imgCaptionContainer {
+    max-width: 576px;
+    margin: 12px 0 36px;
+  }
   #learnMore {
     padding: 48px 0;
   }
@@ -111,6 +137,10 @@ img {
     width: 87.5%;
     max-width: 414px;
     margin-bottom: 52px;
+  }
+  .imgCaptionContainer {
+    width: 87.5%;
+    margin: 12px 0 32px;
   }
   #learnMore {
     padding: 44px 0;
