--- a/Styles/Pages/Invitation.css
+++ b/Styles/Pages/Invitation.css
@@ -24,7 +24,7 @@ img {
   line-height: 31px;
   margin-bottom: 80px;
 }
-#copyButton {
+#copyInvitationCodeBtn {
   cursor: pointer;
   margin-left: 5px;
   line-height: 18px;
@@ -32,9 +32,8 @@ img {
   -webkit-text-stroke: 1px;
   --bs-btn-hover-color: #0F8144;
 }
-#hadCopyTip {
+.hadCopyTip {
   opacity: 0;
-  bottom: -30px;
   border-radius: 3px;
   pointer-events: none;
   background-color: #1d1d1f;
@@ -72,6 +71,36 @@ img {
   background-color: #f5f5f7;
   -webkit-text-stroke: 0.6px;
   --bs-btn-hover-bg: #e8e8e8;
+}
+#topSectionContainer {
+  max-width: 653px;
+  margin-top: 80px;
+  margin-bottom: 44px;
+  transition: all .35s ease;
+}
+#topSectionTag {
+  color: #f5f5f7;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 3px 8px;
+  line-height: 18px;
+  border-radius: 16px;
+  background-color: #6e6e73;
+}
+#topSectionDate {
+  color: #6e6e73;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 23px;
+  margin-left: 12px;
+}
+.shareBtn {
+  font-size: 18px;
+  cursor: pointer;
+  --bs-btn-color: #6e6e73;
+  --bs-btn-hover-color: #1d1d1f;
+  --bs-link-color-rgb: 110, 110, 115;
+  --bs-link-hover-color-rgb: 29, 29, 31;
 }
 #learnMore {
   padding: 52px 0;
@@ -114,6 +143,22 @@ img {
     margin-top: 12px;
     margin-bottom: 36px;
   }
+  #topSectionContainer {
+    max-width: 576px;
+    margin-top: 62px;
+    margin-bottom: 36px;
+  }
+  #topSectionTag {
+    font-size: 12px;
+    font-weight: 500;
+    padding: 2px 6px;
+    line-height: 16px;
+  }
+  #topSectionDate {
+    font-size: 14px;
+    margin-left: 8px;
+    line-height: 19px;
+  }
   #learnMore {
     padding: 48px 0;
   }
@@ -142,6 +187,12 @@ img {
   }
   .imgCaptionContainer {
     width: 87.5%;
+    margin-bottom: 32px;
+  }
+  #topSectionContainer {
+    width: 87.5%;
+    max-width: 362px;
+    margin-top: 52px;
     margin-bottom: 32px;
   }
   #learnMore {
