--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -127,6 +127,7 @@ table {
   transition: all .35s ease;
 }
 .blogPostCaptionContainer {
+  gap: 24px;
   max-width: 693px;
   padding: 0 20px 0;
   margin-bottom: 27px;
@@ -159,7 +160,6 @@ table {
   color: #161617;
   font-size: 13px;
   margin-top: -4px;
-  margin-left: 24px;
   background-color: #f5f5f7;
   -webkit-text-stroke: 0.6px;
   --bs-btn-hover-bg: #e8e8e8;
