--- a/Styles/Pages/Invitation.css
+++ b/Styles/Pages/Invitation.css
@@ -50,6 +50,7 @@ img {
   background: #fafafa linear-gradient(to right, #fafafa 0%, #e8e8ed 20%, #fafafa 40%, #fafafa 100%);
 }
 .imgCaptionContainer {
+  gap: 24px;
   max-width: 653px;
   margin-top: 16px;
   margin-bottom: 44px;
@@ -67,7 +68,6 @@ img {
   color: #161617;
   font-size: 13px;
   margin-top: -4px;
-  margin-left: 24px;
   background-color: #f5f5f7;
   -webkit-text-stroke: 0.6px;
   --bs-btn-hover-bg: #e8e8e8;
