--- a/Styles/Pages/Invitation.css
+++ b/Styles/Pages/Invitation.css
@@ -1,6 +1,13 @@
 img {
   pointer-events: none;
 }
+p {
+  color: #1d1d1f;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  margin-bottom: 27px;
+}
 #smallLogo {
   font-size: 19px;
   font-weight: 500;
@@ -209,6 +216,11 @@ img {
 }
 /* 螢幕小於 1068 */
 @media only screen and (max-width: 1068px) {
+  p {
+    font-size: 16px;
+    line-height: 25px;
+    margin-bottom: 24px;
+  }
   #title {
     width: 692px;
     font-size: 38px;
@@ -292,6 +304,11 @@ img {
 }
 /* 螢幕小於 734 */
 @media only screen and (max-width: 734px) {
+  p {
+    font-size: 16px;
+    line-height: 25px;
+    margin-bottom: 24px;
+  }
   #smallLogo {
     margin-top: 60px;
   }
