--- a/Styles/Pages/Invitation.css
+++ b/Styles/Pages/Invitation.css
@@ -7,7 +7,7 @@ h2 {
   line-height: 28px;
   margin: 52px 0 16px;
 }
-p {
+p, ul {
   color: #1d1d1f;
   font-size: 18px;
   font-weight: 400;
@@ -227,7 +227,7 @@ p {
     line-height: 25px;
     margin: 48px 0 16px;
   }
-  p {
+  p, ul {
     font-size: 16px;
     line-height: 25px;
     margin-bottom: 24px;
@@ -318,7 +318,7 @@ p {
   h2 {
     margin: 44px 0 16px;
   }
-  p {
+  p, ul {
     font-size: 16px;
     line-height: 25px;
     margin-bottom: 24px;
