--- a/Styles/Pages/Invitation.css
+++ b/Styles/Pages/Invitation.css
@@ -369,6 +369,8 @@ p, ul {
   }
   .imgContainer {
     width: 100%;
+  }
+  .invitaionImg {
     border-radius: 0 !important;
   }
   #shareTitle {
