--- a/Styles/Pages/Invitation.css
+++ b/Styles/Pages/Invitation.css
@@ -12,7 +12,8 @@ h3 {
   font-weight: 600;
   margin-bottom: 16px;
 }
-p, ul {
+.invitationContainer p,
+ul {
   color: #1d1d1f;
   font-size: 18px;
   font-weight: 400;
@@ -238,7 +239,8 @@ p, ul {
   h3 {
     font-size: 18px;
   }
-  p, ul {
+  .invitationContainer p,
+  ul {
     font-size: 16px;
     line-height: 25px;
     margin-bottom: 24px;
@@ -332,7 +334,8 @@ p, ul {
   h2 {
     margin: 44px 0 16px;
   }
-  p, ul {
+  .invitationContainer p,
+  ul {
     font-size: 16px;
     line-height: 25px;
     margin-bottom: 24px;
