--- a/Styles/Pages/Invitation.css
+++ b/Styles/Pages/Invitation.css
@@ -209,6 +209,7 @@ ul {
 }
 #floatCapsuleLink {
   gap: 16px;
+  max-width: 87.5%;
   border-radius: 32px;
   background-color: #e8e8edb3;
   padding: 10px 10px 10px 24px;
