--- a/Styles/Pages/Invitation.css
+++ b/Styles/Pages/Invitation.css
@@ -209,13 +209,14 @@ ul {
 }
 #floatCapsuleLink {
   gap: 16px;
-  scale: 0;
   padding: 10px;
+  margin-top: 30px;
   max-width: 87.5%;
   border-radius: 32px;
   backdrop-filter: blur(7px);
   background-color: #e8e8edb3;
   -webkit-backdrop-filter: blur(7px);
+  transform: translateY(0) scale(0, 0);
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s;
 }
 #floatCapsuleLink:hover #floatCapsuleIcon {
